--- a/src/languages/vi/common.json
+++ b/src/languages/vi/common.json
@@ -12,24 +12,44 @@
 	"class": "Nghề",
 	"consumables": "Tiêu thụ",
 	"cooldown": "Cooldown",
+	"create": "Tạo",
 	"daily": "Hàng ngày",
 	"descriptions": {
 		"awakeName": "Tên nhân vật",
 		"buyItem": "Vật phẩm mà bạn muốn mua.",
 		"buyQuantity": "Số lượng vật phẩm bạn muốn mua.",
+		"giveHunter": "Thợ săn mà bạn muốn gửi vàng đến.",
+		"giveQuantity": "Số lượng vàng mà bạn muốn gửi.",
 		"hunterInventory": "Người bạn muốn xem.",
 		"hunterProfile": "Người bạn muốn xem.",
 		"language": "Ngôn ngữ mà bạn muốn đổi",
+		"page": "Số trang",
+		"partyCreate": "Tạo tổ đội",
+		"partyDisband": "Giải tán tổ đội",
+		"partyGive": "Phát chiến lợi phẩm cho một thành viên của đổ đội",
+		"partyGiveQuantity": "Số lượng chiến lợi phẩm",
+		"partyInfo": "Thông tin tổ đội",
+		"partyInvite": "Mời một thợ sặn tham gia tổ đội",
+		"partyKick": "Đá một thành viên ra khỏi tổ đội",
+		"partyLeave": "Rời khỏi tổ đội",
+		"partyLoots": "Chiến lợi phẩm của tổ đội",
+		"partyMember": "Thành viên tổ đội",
+		"partyName": "Tên tổ đội (\"Tổ đội của {Tên đội trưởng}\")",
+		"partyTransfer": "Chuyển nhượng chức đội trưởng tổ đội cho thành viên khác",
+		"sellItem": "Vật phẩm mà bạn muốn bán.",
+		"sellQuantity": "Số lượng vật phẩm mà bạn muốn bán.",
 		"showInventory": "Có nên hiển thị kho đồ cho người khác không?",
 		"showProfile": "Có nên hiển thị hồ sơ cho người khác không?",
 		"term": "Thứ mà bạn cần trợ giúp",
 		"useItem": "Vật phẩm mà bạn muốn sử dụng."
 	},
+	"disband": "Giải tán",
 	"drink": "Hồi năng lượng",
 	"drop": "Vật phẩm",
 	"examples": "Ví dụ",
 	"fighter": "Đấu sĩ",
 	"gate": "Cổng",
+	"give": "Gửi",
 	"gloves": "Găng",
 	"guild": "Bang hội",
 	"heal": "Hồi máu",
@@ -43,7 +63,9 @@
 	"invite": "Mời",
 	"item": "Vật phẩm",
 	"keys": "Khóa",
+	"kick": "Đá",
 	"language": "Ngôn ngữ",
+	"leave": "Rời",
 	"level": "Cấp",
 	"levelDepends": {
 		"amount": "Số lượng",
@@ -56,6 +78,7 @@
 	},
 	"library": "Thư viện",
 	"links": "Useful links",
+	"loots": "Chiến lợi phẩm",
 	"mage": "Pháp sư",
 	"materials": "Vật liệu",
 	"max": "Tối đa",
@@ -66,6 +89,7 @@
 	"no": "Không",
 	"none": "không",
 	"notEnough": "Không đủ {{what}}!",
+	"page": "Trang",
 	"party": "Tổ đội",
 	"profile": "Hồ sơ",
 	"quantity": "Số lượng",
@@ -76,6 +100,7 @@
 	"ring": "Nhẫn",
 	"rule": "Luật",
 	"selectMenuPlaceholder": "Lựa chọn",
+	"sell": "Bán",
 	"sellValue": "Giá bán",
 	"server": "Máy chủ",
 	"shard": "Mảnh",
@@ -118,6 +143,7 @@
 		}
 	},
 	"timeout": "Hết giờ",
+	"transfer": "Chuyển nhượng",
 	"type": "Loại",
 	"unspecialized": "Tán nhân",
 	"uptime": "Uptime",
