--- a/src/languages/vi/constant.json
+++ b/src/languages/vi/constant.json
@@ -36,20 +36,20 @@
 		"lottery ticket": "<:s:763331798423044097>",
 		"mana potion": "<:s:740053804480856074>",
 		"materials": {
-			"Briga's Claw": "<:BrigasClaw:749291018763108383>",
-			"Briga's Fur": "<:BrigasFur:749291018423107675>",
-			"Goblin's Cloth": "<:GoblinsCloth:749291059657441290>",
-			"Goblin's Eye": "<:Goblinseye:749291059615629333>",
-			"Raikan's Fang": "<:RaikansSteelFang:749290982037782599>",
-			"Raikan's Fur": "<:RaikansFur:749290981601443942>",
-			"Rasaka's Eye": "<:RasakasEye:749291094969155644>",
-			"Rasaka's Poison Fang": "<:RasakasPoisonFang:752077738008903681>",
-			"Rasaka's Red Scale": "<:RasakasRedScale:749292242497306664>",
-			"Rasaka's Scale": "<:RasakasScale:749291094570827817>",
-			"Razan's Fang": "<:RazansFang:749291136945750147>",
-			"Razan's Fur": "<:RazansFur:749291136975241266>",
-			"Stone Golem's Core": "<:StoneGolem_sCore:751417103831138386>",
-			"Stone Golem's Skin Shard": "<:StoneGolemsSkin:749290950072729661>"
+			"Briga's Claw": "<:s:749291018763108383>",
+			"Briga's Fur": "<:s:749291018423107675>",
+			"Goblin's Cloth": "<:s:749291059657441290>",
+			"Goblin's Eye": "<:s:749291059615629333>",
+			"Raikan's Fang": "<:s:749290982037782599>",
+			"Raikan's Fur": "<:s:749290981601443942>",
+			"Rasaka's Eye": "<:s:749291094969155644>",
+			"Rasaka's Poison Fang": "<:s:752077738008903681>",
+			"Rasaka's Red Scale": "<:s:749292242497306664>",
+			"Rasaka's Scale": "<:s:749291094570827817>",
+			"Razan's Fang": "<:s:749291136945750147>",
+			"Razan's Fur": "<:s:749291136975241266>",
+			"Stone Golem's Core": "<:s:751417103831138386>",
+			"Stone Golem's Skin Shard": "<:s:749290950072729661>"
 		},
 		"pvp": "<:s:724541953978662972>",
 		"quest": "<:s:724541953961623572>",
