--- a/src/languages/en-US/common.json
+++ b/src/languages/en-US/common.json
@@ -41,6 +41,14 @@
 		"showInventory": "Should the inventory be shown to other people?",
 		"showProfile": "Should the profile be shown to other people?",
 		"term": "The things you need help",
+		"topGlobal": "Top hunters global",
+		"topGlobalGold": "Top hunters by gold",
+		"topGlobalLevel": "Top hunters by level",
+		"topGlobalRank": "Top hunters by rank",
+		"topServer": "Top hunters in this server",
+		"topServerGold": "Top hunters in this server by gold",
+		"topServerLevel": "Top hunters in this server by level",
+		"topServerRank": "Top hunters in this server by rank",
 		"useItem": "The item you wanna use."
 	},
 	"disband": "Disband",
@@ -50,6 +58,7 @@
 	"fighter": "Fighter",
 	"gate": "Gate",
 	"give": "Give",
+	"global": "Global",
 	"gloves": "Gloves",
 	"guild": "Guild",
 	"heal": "Heal",
@@ -90,6 +99,7 @@
 	"none": "none",
 	"notEnough": "Not enough {{what}}!",
 	"page": "Page",
+	"page_format": "Page {{page}}/{{total}}",
 	"party": "Party",
 	"profile": "Profile",
 	"quantity": "Quantity",
@@ -143,6 +153,7 @@
 		}
 	},
 	"timeout": "Time out",
+	"top": "Top",
 	"transfer": "Transfer",
 	"type": "Type",
 	"unspecialized": "Unspecialized",
