--- a/src/languages/vi/common.json
+++ b/src/languages/vi/common.json
@@ -41,6 +41,14 @@
 		"showInventory": "Có nên hiển thị kho đồ cho người khác không?",
 		"showProfile": "Có nên hiển thị hồ sơ cho người khác không?",
 		"term": "Thứ mà bạn cần trợ giúp",
+		"topGlobal": "Bảng xếp hạng thợ săn trên toàn thế giới",
+		"topGlobalGold": "Bảng xếp hạng thợ săn theo số lượng vàng",
+		"topGlobalLevel": "Bảng xếp hạng thợ săn theo cấp độ",
+		"topGlobalRank": "Bảng xếp hạng thợ săn theo cấp",
+		"topServer": "Bảng xếp hạng thợ săn trong máy chủ này",
+		"topServerGold": "Bảng xếp hạng thợ săn theo số lượng vàng trong máy chủ này",
+		"topServerLevel": "Bảng xếp hạng thợ săn theo cấp độ trong máy chủ này",
+		"topServerRank": "Bảng xếp hạng thợ săn theo hạng trong máy chủ này",
 		"useItem": "Vật phẩm mà bạn muốn sử dụng."
 	},
 	"disband": "Giải tán",
@@ -50,6 +58,7 @@
 	"fighter": "Đấu sĩ",
 	"gate": "Cổng",
 	"give": "Gửi",
+	"global": "Thế giới",
 	"gloves": "Găng",
 	"guild": "Bang hội",
 	"heal": "Hồi máu",
@@ -90,6 +99,7 @@
 	"none": "không",
 	"notEnough": "Không đủ {{what}}!",
 	"page": "Trang",
+	"page_format": "Trang {{page}}/{{total}}",
 	"party": "Tổ đội",
 	"profile": "Hồ sơ",
 	"quantity": "Số lượng",
@@ -143,6 +153,7 @@
 		}
 	},
 	"timeout": "Hết giờ",
+	"top": "Bảng xếp hạng",
 	"transfer": "Chuyển nhượng",
 	"type": "Loại",
 	"unspecialized": "Tán nhân",
