--- a/src/languages/vi/constant.json
+++ b/src/languages/vi/constant.json
@@ -78,5 +78,16 @@
 	},
 	"patreon": "https://www.patreon.com/sololevelingsimulator",
 	"patreon_markdown": "[Patreon](https://www.patreon.com/sololevelingsimulator)",
-	"serverInvite": "https://discord.gg/x8MgGnaNK5"
+	"serverInvite": "https://discord.gg/x8MgGnaNK5",
+	"rank": [
+		"",
+		"$t(glossary:ranks.E-Rank)",
+		"$t(glossary:ranks.D-Rank)",
+		"$t(glossary:ranks.C-Rank)",
+		"$t(glossary:ranks.B-Rank)",
+		"$t(glossary:ranks.A-Rank)",
+		"$t(glossary:ranks.S-Rank)",
+		"$t(glossary:ranks.SS-Rank)",
+		"$t(glossary:ranks.National Level)"
+	]
 }
